--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "better-scroll": "^1.8.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "create-keyframe-animation": "^0.1.0",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.0.1",
