--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "js-base64": "^2.4.3",
     "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
